# sun-earth-moon-demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: CubeMap.h  FrameBuffer.h  Fwd.h  GLFWWindow.h  Mesh.h  MeshPreset.h  RenderPass.h  Shader.h  ShaderProgram.h  Texture.h
res/envbox/: README.txt
res/shader/: blur.frag  blur.vert  cubemap.frag  cubemap.vert  earth.frag  earth.vert  moon.frag  moon.vert  postprocessing.frag  sun.frag  sun.vert
res/surface/: README.txt
src/: CubeMap.cpp  FrameBuffer.cpp  GLFWWindow.cpp  Mesh.cpp  MeshPreset.cpp  RenderPass.cpp  ShaderProgram.cpp  Texture.cpp  main.cpp
